18.2.7-http-redirect-by-service/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-redirect-by-service
  namespace: avi-feature
  labels:
    feature: http-redirect-by-service 
  annotations:
    avi_proxy: '{"virtualservice": {"application_profile_ref": "/api/applicationprofile?name=Redirect-HTTPS", "services": [{"port": 443, "enable_ssl": true},{"port": 80}], "ssl_key_and_certificate_refs": ["/api/sslkeyandcertificate?name=System-Default-Cert-EC"], "ssl_profile_ref": "/api/sslprofile/?name=System-Standard"}}'
spec:
  ports:
    - port: 443
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: http-redirect-by-service
