18.2.7-http-redirect-by-service/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-http-redirect-by-service
  namespace: avi-feature
  labels:
    feature: http-redirect-by-service   
spec:
  rules:
  - host: http-redirect-by-service.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-http-redirect-by-service
          servicePort: 80
